fix names into more readable

--- a/src/sass/modules/_slider.scss
+++ b/src/sass/modules/_slider.scss
@@ -33,40 +33,10 @@
     /* box model */
     width: 100%;
     height: 300px;
-
-    /* visual */
-    //transition: transform 0.3s ease-in-out;
 }
 
 .slide__image {
     /* box model */
     display: block;
     width: 100%;
-}
-
-.someOuterBlock {
-    /* positioning */
-    position: relative;
-
-    /* box model */
-    height: 400px;
-    margin-bottom: 100px;
-}
-
-.someBlock {
-    /* positioning */
-    position: absolute;
-
-    /* box model */
-    height: 300px;
-    width: 100%;
-
-    /* visual */
-    background-color: #a52a2a;
-    transition: transform 0.3s ease-in-out;
-}
-
-.someButtonToClick {
-    /* positioning */
-    position: relative;
 }
